finished creating templates for interactng with generated code in go
